Call the C function from Java (nice and easy; FFI fulfilling its promise here)